--- a/.travis.yml
+++ b/.travis.yml
@@ -13,10 +13,14 @@ addons:
 script:
   - chmod +x test.sh
   - ./test.sh
-  - CGO_ENABLED=0 go build
-  - docker build --rm -t trigun117/news_aggregator .
-  - echo "$DOCKER_PASS" | docker login -u "$DOCKER_USER" --password-stdin
-  - docker push trigun117/news_aggregator
 
 after_success:
   - bash <(curl -s https://codecov.io/bash)
+  - CGO_ENABLED=0 go build
+
+deploy:
+  skip_cleanup: true
+  provider: script
+  script: sh build_docker.sh
+  on:
+    branch: master
